<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mainmenu">MainMenu</string>
    <string name="hello">Hello World, VideoPoker!</string>
    <string name="app_name">VideoPoker</string>
<string name="main">SplashScreen</string>
<string name="version">1.0</string>
<string name="about">Since you are playing against a machine, the objective is to get the best hand.\n Video Poker deals a five cards hand by pressing the \&quot;Deal\&quot; button.\nYou can hold or throw away as many cards as you like by pressing on the cards to hold them.\nAfter selecting the card(s) you want to hold or discard, pressing on \&quot;Draw\&quot; Button.\nThe cards you didn’t hold are replaced with new cards.\nIf the new hand contains a winning combination, you get paid and your score increases.</string>
<string name="developed_by">Eugene</string>
<string name="developed_date">2010</string>
<string name="label_about">About</string>
<string name="label_developed_by">Developed By :</string>
<string name="label_version">Version :</string>
<string name="label_date">Date :</string>
<string name="loading">Loading...</string>
<string name="highscore">HighScore</string>
<string name="play">Play</string>
<string name="deal">Deal</string>
<string name="empty_string"></string>
<string name="keep">Keep</string>
<string name="redeal">ReDeal</string>
<string name="three_of_a_kind">Three of a Kind</string>
<string name="four_of_a_kind">Four of a Kind</string>
<string name="full_house">Full House</string>
<string name="you_lose">You Lose</string>
<string name="royal_flush">Royal Flush</string>
<string name="straight_flush">Straight Flush</string>
<string name="straight">Straight</string>
<string name="flush">Flush</string>
<string name="pair">Pair</string>
<string name="two_pair">Two Pair</string>
<string name="result">Result</string>
<string name="credit">Credit : </string>
<string name="win">Win : </string>
<string name="bet_one">BET ONE</string>
<string name="bet">Bet : </string>
<string name="bet_max">BET MAX</string>
<string name="high_pair">High Pair</string>
<string name="button_draw">Draw</string>
<string name="score">Score :</string>
<string name="help">Help</string>
<string name="help_text">\nJACKS OR BETTER\nJacks or Better hand rankings.\nThe winning hands for Jacks or Better from highest to lowest are:\nRoyal Flush - 10, J, Q, K and A of the same suit.\nStraight Flush – Five consecutive cards in the same suit, for instance 7, 8, 9, 10 and J.\nFour of a Kind – A hand with four cards of the same value, such as four Nines.\nFull House - Three cards of one value, and two cards of another value, like three Sixes and two Queens.\nFlush – Any five cards of the same suit.\nStraight – Any five consecutive cards, such as 2, 3, 4, 5 and 6 but not in the same suit.\nThree of a Kind - Three cards of the same value, three Fives for instance.\nTwo Pair – A hand containing two pairs, such as two Eights and two Kings.\nPair of Jacks or Better – A pair of Jacks, Queens, Kings or Aces makes up the lowest paying hand.</string>
</resources>
