<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/label_about" android:textStyle="bold" android:layout_centerHorizontal="true" android:layout_width="wrap_content"></TextView>
<TextView android:layout_width="wrap_content" android:id="@+id/TextView02" android:layout_height="wrap_content" android:text="@string/about" android:layout_below="@+id/TextView01" android:layout_centerHorizontal="true" android:paddingBottom="10px"></TextView><TextView android:layout_width="wrap_content" android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/label_developed_by" android:layout_below="@+id/TextView02" android:layout_marginRight="10px" android:layout_marginTop="20px"></TextView><TextView android:layout_width="wrap_content" android:id="@+id/TextView04" android:layout_toRightOf="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/developed_by" android:layout_below="@+id/TextView02" android:layout_centerHorizontal="true" android:layout_marginTop="20px"></TextView><TextView android:layout_below="@+id/TextView03" android:layout_width="wrap_content" android:id="@+id/TextView06" android:layout_height="wrap_content" android:text="@string/label_date" android:layout_marginRight="10px"></TextView><TextView android:layout_below="@+id/TextView03" android:layout_width="wrap_content" android:id="@+id/TextView07" android:layout_toRightOf="@+id/TextView06" android:layout_height="wrap_content" android:text="@string/developed_date"></TextView><TextView android:layout_below="@+id/TextView06" android:layout_width="wrap_content" android:id="@+id/TextView08" android:layout_height="wrap_content" android:text="@string/label_version" android:layout_marginRight="10px"></TextView><TextView android:layout_below="@+id/TextView06" android:layout_width="wrap_content" android:id="@+id/TextView09" android:layout_toRightOf="@+id/TextView08" android:layout_height="wrap_content" android:text="@string/version"></TextView>
</RelativeLayout>
